; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp16_mov_word_RM_IMM.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp16_mov_word_RM_IMM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.x86emu*)* @x86emuOp16_mov_word_RM_IMM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @x86emuOp16_mov_word_RM_IMM(%struct.x86emu* %0) #0 {
  %2 = alloca %struct.x86emu*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.x86emu* %0, %struct.x86emu** %2, align 8
  %6 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %7 = call i32 @fetch_decode_modrm(%struct.x86emu* %6)
  %8 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %9 = getelementptr inbounds %struct.x86emu, %struct.x86emu* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %14 = call i32 @x86emu_halt_sys(%struct.x86emu* %13)
  br label %15

15:                                               ; preds = %12, %1
  %16 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %17 = getelementptr inbounds %struct.x86emu, %struct.x86emu* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = icmp ne i32 %18, 3
  br i1 %19, label %20, label %29

20:                                               ; preds = %15
  %21 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %22 = call i32 @decode_rl_address(%struct.x86emu* %21)
  store i32 %22, i32* %3, align 4
  %23 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %24 = call i32 @fetch_word_imm(%struct.x86emu* %23)
  store i32 %24, i32* %4, align 4
  %25 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %26 = load i32, i32* %3, align 4
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @store_data_word(%struct.x86emu* %25, i32 %26, i32 %27)
  br label %36

29:                                               ; preds = %15
  %30 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %31 = call i32* @decode_rl_word_register(%struct.x86emu* %30)
  store i32* %31, i32** %5, align 8
  %32 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %33 = call i32 @fetch_word_imm(%struct.x86emu* %32)
  store i32 %33, i32* %4, align 4
  %34 = load i32, i32* %4, align 4
  %35 = load i32*, i32** %5, align 8
  store i32 %34, i32* %35, align 4
  br label %36

36:                                               ; preds = %29, %20
  ret void
}

declare dso_local i32 @fetch_decode_modrm(%struct.x86emu*) #1

declare dso_local i32 @x86emu_halt_sys(%struct.x86emu*) #1

declare dso_local i32 @decode_rl_address(%struct.x86emu*) #1

declare dso_local i32 @fetch_word_imm(%struct.x86emu*) #1

declare dso_local i32 @store_data_word(%struct.x86emu*, i32, i32) #1

declare dso_local i32* @decode_rl_word_register(%struct.x86emu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
